# optimeist

./: .gitignore  .prettierrc.json  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  published-layers.txt  tsconfig.json
cli/: Cargo.toml
cli/src/: app.rs  event.rs  main.rs
cli/src/aws/: install.rs  lambda.rs  mod.rs  policy.rs  secret.rs
cli/src/models/: lambda.rs  layers.rs  load_state.rs  mod.rs
cli/src/ui/: install.rs  lambdas.rs  mod.rs
cli/src/ui/widgets/: loader.rs
extension/: Cargo.toml
extension/src/: environment.rs  events.rs  main.rs  telemetry.rs
src/: constants.ts  get-extension-layer-arn.ts  go-function.ts  index.ts  lambda-function.ts  layers.json  nodejs-function.ts  python-function.ts  types.ts
