[package]
name = "optimeist"
version = "0.1.0"
description = "Optimeist CLI tool"
license = "MIT"
edition = "2024"

[dependencies]
aws-config = { workspace = true }
aws-sdk-iam = "1.79.0"
aws-sdk-lambda = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
once_cell = "1.21.3"
ratatui = { version = "0.29.0", features = ["default"] }
serde = {workspace = true}
serde_json = { workspace = true }
tokio = { workspace = true }
